--- a/SecurityHardening.yml
+++ b/SecurityHardening.yml
@@ -3,4 +3,7 @@
 - name: Security Hardening
   hosts: all
   tasks:
-    - name: 
+    - name: Disable "Windows PowerShell 2.0" on the system
+      ansible.windows.win_shell: Disable-WindowsOptionalFeature -Online -FeatureName MicrosoftWindowsPowerShellV2Root
+
+    - name:   
